tests/invalid/gh72_errors.err_exp3
gh72_errors.m:028: Warning: this [38;5;87m`:- import_module' declaration for module[39;49m
gh72_errors.m:028:   [38;5;87m`solutions'[39;49m [38;5;203mis out of order[39;49m with respect to the preceding
gh72_errors.m:028:   `:- import_module' declaration for module `string'.
gh72_errors.m:156: Error: [38;5;203mduplicate C# foreign_proc[39;49m for this mode of predicate
gh72_errors.m:156:   `test_fproc_2'/5.
gh72_errors.m:140:   The first one was here.
